tests/sema/bad/03_binop_mismatch.sg
let a:int = 1;
let b:float = 2.0;
let c:int = a + b;
